--- a/rules/flash_leds_via_twitter.yaml
+++ b/rules/flash_leds_via_twitter.yaml
@@ -12,10 +12,10 @@ criteria:
         pattern : "Stack_Storm"
     trigger.text:
         type: "icontains"
-        pattern : "OpenStack"
+        pattern : "serverless"
     trigger.text:
         type: "icontains"
-        pattern : "awesome"
+        pattern : "serverlessconf"
 
 action:
     ref: led_pack.flash-leds
