--- a/actions/read_leds.yaml
+++ b/actions/read_leds.yaml
@@ -1,6 +1,6 @@
-name: read-switch
+name: read-leds
 pack: led_pack
-description: Read switch R-Pi configuration
+description: Read led controller current color settings
 runner_type: http-request
 entry_point: ''
 parameters:
@@ -8,7 +8,7 @@ parameters:
     default: GET
     immutable: true
   url:
-    default: "{{config_context.switch_controller}}"
+    default: "{{config_context.led_controller}}"
     required: false
     type: string
     immutable: true
