--- a/rules/flash_leds_via_twitter.yaml
+++ b/rules/flash_leds_via_twitter.yaml
@@ -12,10 +12,7 @@ criteria:
         pattern : "Stack_Storm"
     trigger.text:
         type: "icontains"
-        pattern : "serverless"
-    trigger.text:
-        type: "icontains"
-        pattern : "serverlessconf"
+        pattern : "SREcon"
 
 action:
     ref: led_pack.flash-leds
